--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "postcss-nested": "^6.2.0",
         "postcss-nesting": "^12.1.5",
         "prettier": "^3.3.3",
+        "sass-embedded": "^1.79.2",
         "stylelint": "^16.7.0",
         "stylelint-config-css-modules": "^4.4.0",
         "stylelint-config-recess-order": "^5.0.1",
