feat: develop router & add tabs

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -38,7 +38,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@styles/*": ["src/styles/*"]
     }
   },
   "include": ["src"]
