--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@mui/material": "^6.1.1",
+        "@mui/x-charts": "^7.18.0",
         "deepmerge": "^4.3.1",
+        "install": "^0.13.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2"
