--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/x-charts": "^7.18.0",
         "deepmerge": "^4.3.1",
         "install": "^0.13.0",
+        "gsap": "^3.12.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2"
