--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
+        "@gsap/react": "^2.1.1",
         "@mui/material": "^6.1.1",
         "@mui/x-charts": "^7.18.0",
         "deepmerge": "^4.3.1",
-        "install": "^0.13.0",
         "gsap": "^3.12.5",
+        "install": "^0.13.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2"
