--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
         "@mui/icons-material": "^6.1.1",
         "@mui/material": "^6.1.1",
         "@mui/x-charts": "^7.18.0",
+        "@rainbow-me/rainbowkit": "^2.1.6",
+        "@tanstack/react-query": "^5.56.2",
         "deepmerge": "^4.3.1",
         "gsap": "^3.12.5",
         "install": "^0.13.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.2"
+        "react-router-dom": "^6.26.2",
+        "viem": "2.x",
+        "wagmi": "^2.12.13"
     },
     "devDependencies": {
         "@types/node": "^20.14.11",
