--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
+        "react-use": "^17.5.1",
         "viem": "2.x",
         "wagmi": "^2.12.13"
     },
