--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@mui/x-charts": "^7.18.0",
         "@rainbow-me/rainbowkit": "^2.1.6",
         "@tanstack/react-query": "^5.56.2",
+        "axios": "^1.7.7",
         "deepmerge": "^4.3.1",
         "gsap": "^3.12.5",
         "install": "^0.13.0",
